--- a/requirements.txt
+++ b/requirements.txt
@@ -1,65 +1,93 @@
+alembic==1.5.2
 asn1crypto==0.24.0
-Brlapi==0.6.7
+attrs==20.3.0
+bbcode==1.1.0
+beautifulsoup4==4.9.3
+cached-property==1.5.2
 certifi==2018.8.24
+cffi==1.14.4
 chardet==3.0.4
 click==7.1.2
 cryptography==2.6.1
 cson==0.7
 cupshelpers==1.0
+dbus-python==1.2.16
 distro==1.3.0
+distro-info==0.24
 dnspython==2.0.0
+docker==4.1.0
+docker-compose==1.25.0
+dockerpty==0.4.1
+docopt==0.6.2
 dominate==2.5.2
 email-validator==1.1.1
 entrypoints==0.3
+evdev==1.3.0
 feedparser==5.2.1
 Flask==1.1.2
-Flask-Bootstrap==3.3.7.2.dev1
+Flask-Bootstrap==3.3.7.1
 Flask-Ext==0.1
 Flask-Login==0.5.0
+Flask-Migrate==2.6.0
+Flask-Script==2.0.6
 Flask-SQLAlchemy==2.4.4
 Flask-Uploads==0.2.1
 Flask-WTF==0.14.3
-greenlet==0.4.15
-httplib2==0.11.3
+html5lib==1.1
+httplib2==0.18.1
 idna==2.6
+importlib-metadata==1.6.0
 itsdangerous==1.1.0
 Jinja2==2.11.2
-keyring==17.1.1
-keyrings.alt==3.1.1
-louis==3.8.0
-Mako==1.0.7
+jsonschema==3.2.0
+lxml==4.6.2
+Mako==1.1.4
 MarkupSafe==1.1.1
-msgpack==0.5.6
-mutagen==1.40.0
-numpy==1.16.2
+more-itertools==4.2.0
+numpy==1.19.4
 olefile==0.46
-pexpect==4.6.0
-Pillow==5.4.1
+openshot-qt==2.5.1
+pexpect==4.8.0
+Pillow==8.1.0
 pycairo==1.16.2
-pycrypto==2.6.1
-pycups==1.9.73
-pycurl==7.43.0.2
-PyGObject==3.30.4
-pyinotify==0.9.6
+pycparser==2.20
+pycups==2.0.1
+pycurl==7.43.0.6
+Pygments==2.7.1
+PyGObject==3.38.0
+PyQt5==5.15.2
+PyQt5-sip==12.8.1
+pyrsistent==0.15.5
 PySimpleSOAP==1.16.2
-pysmbc==1.0.15.6
-python-apt==1.8.4.1
-python-debian==0.1.35
-python-debianbts==2.8.2
-pyxattr==0.6.1
-pyxdg==0.25
-quodlibet==4.2.1
-reportbug===7.5.3-deb10u1
-reportlab==3.5.13
-requests==2.21.0
-SecretStorage==2.3.1
-six==1.12.0
+pysmbc==1.0.23
+python-apt==2.1.7
+python-dateutil==2.8.1
+python-debian==0.1.39
+python-debianbts==3.1.0
+python-editor==1.0.4
+python-magic==0.4.16
+pyxattr==0.7.2
+PyYAML==5.3.1
+pyzmq==20.0.0
+ranger-fm==1.9.3
+reportbug==7.9.0
+reportlab==3.5.59
+requests==2.25.1
+scour==0.38.2
+setproctitle==1.2.1
+six==1.15.0
+soupsieve==2.1
 speg==0.3
 SQLAlchemy==1.3.19
-urllib3==1.24.1
+StringGenerator==0.3.4
+texttable==1.6.3
+unattended-upgrades==0.1
+urllib3==1.26.2
 visitor==0.1.3
+webencodings==0.5.1
+websocket-client==0.57.0
 Werkzeug==1.0.1
 WTForms==2.3.3
-wtforms-recaptcha==0.3.2
-youtube-dl==2020.9.14
+youtube-dl==2021.1.8
 youtube-transcript-api==0.3.1
+zipp==1.0.0
